<resources>
    <string name="app_name">The Trio App</string>
    <string name="search">Search</string>
    <string name="search1">Search...</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="app">The TRIO</string>
    <string name="moto">Your favorite review app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fav">Favorite</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>