<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_login">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.fproject.ui.Search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.fproject.ui.Profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.fproject.ui.Settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_fav"
        android:name="com.example.fproject.ui.Fav.FavFragment"
        android:label="@string/fav"
        tools:layout="@layout/fragment_fav" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.fproject.ui.Fav.FavFragment"
        android:label="@string/login"
        tools:layout="@layout/triologin" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>
</navigation>